Se transpilan los estilos a la carpeta CSS

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -32,4 +32,39 @@ body {
   min-height: 100vh;
 }
 
+h1, h2, h3 {
+  font-family: var(--fontTitles);
+  font-weight: 400;
+  font-size: 4rem;
+  color: var(--firstColorPrimary);
+}
+
+h1 {
+  font-weight: 500;
+  font-size: 4rem;
+}
+@media screen and (min-width: 740px) {
+  h1 {
+    font-size: 5.6rem;
+  }
+}
+
+p, a {
+  font-family: var(--fontText);
+}
+
+p {
+  font-size: 1.4rem;
+  line-height: 1.56;
+}
+@media screen and (min-width: 740px) {
+  p {
+    font-size: 1.6rem;
+  }
+}
+
+a {
+  text-decoration: none;
+}
+
 /*# sourceMappingURL=styles.css.map */
