--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -67,4 +67,97 @@ a {
   text-decoration: none;
 }
 
+.main-header {
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 8rem;
+  background-color: var(--colorWhite);
+  padding: 0rem 2.4rem;
+  border-bottom: 0.2px solid rgba(0, 0, 0, 0.1);
+  z-index: 200;
+}
+@media screen and (min-width: 740px) {
+  .main-header {
+    position: relative;
+    border-bottom: none;
+    padding: 0 4.8rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .main-header {
+    padding: 0 10rem;
+  }
+}
+.main-header__logo {
+  display: block;
+  width: 15rem;
+  height: 3rem;
+}
+
+.main-header__content {
+  position: absolute;
+  top: 8rem;
+  right: -70vw;
+  display: flex;
+  width: 70vw;
+  height: calc(100vh - 8rem);
+  z-index: 1000;
+  transition: right 0.5s;
+}
+.main-header__content--new {
+  right: 0;
+}
+@media screen and (min-width: 700px) {
+  .main-header__content {
+    position: static;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 8rem;
+    justify-content: center;
+  }
+}
+
+.home {
+  width: 15rem;
+  height: 3rem;
+  margin-right: 1.6rem;
+}
+@media screen and (min-width: 740px) {
+  .home {
+    margin-right: 2.4rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .home {
+    margin-right: 3.2rem;
+  }
+}
+
+.container-main-hamburguer {
+  width: 2.4rem;
+  height: 1.8rem;
+  background: linear-gradient(#2D314D 20%, transparent 20%, transparent 40%, #2D314D 40%, #2D314D 60%, transparent 60%, transparent 80%, #2D314D 80%);
+  background-position: center center;
+  background-repeat: no-repeat;
+  transition: all 0.5s;
+}
+.container-main-hamburguer--new {
+  transform: scale(1.8);
+  background-image: url("../images/icon-close.svg");
+  background-size: cover;
+}
+.container-main-hamburguer:hover {
+  cursor: pointer;
+}
+@media screen and (min-width: 700px) {
+  .container-main-hamburguer {
+    display: none;
+  }
+}
+
 /*# sourceMappingURL=styles.css.map */
