--- a/SCSS/base/_base.scss
+++ b/SCSS/base/_base.scss
@@ -1,3 +1,6 @@
+@use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
+
 *, *::before, *::after{
 	margin: 0;
 	padding: 0;
@@ -13,4 +16,8 @@ body{
 	flex-direction: column;
 	align-items: center;
 	min-height: 100vh;
+
+	@include responsive(desktop){
+		padding-top: 2.4rem;
+	}
 }
