--- a/SCSS/base/_base.scss
+++ b/SCSS/base/_base.scss
@@ -16,6 +16,7 @@ body{
 	flex-direction: column;
 	align-items: center;
 	min-height: 100vh;
+	padding-top: 1.2rem;
 
 	@include responsive(desktop){
 		padding-top: 2.4rem;
