--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -47,6 +47,7 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  padding-top: 1.2rem;
 }
 @media screen and (min-width: 1024px) {
   body {
@@ -91,7 +92,7 @@ a {
 
 .main-header {
   position: fixed;
-  top: 0;
+  top: 1.2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -99,12 +100,13 @@ a {
   height: 8rem;
   background-color: var(--colorWhite);
   padding: 0rem 2.4rem;
-  border-bottom: 0.2px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 0.02rem solid rgba(0, 0, 0, 0.1);
   z-index: 200;
 }
 @media screen and (min-width: 740px) {
   .main-header {
     position: relative;
+    top: 0;
     border-bottom: none;
     padding: 0 4.8rem;
   }
