--- a/SCSS/components/header/_button.scss
+++ b/SCSS/components/header/_button.scss
@@ -9,6 +9,7 @@
     border-radius: 1.6rem;
     color: var(--colorWhite);
     padding: 1.6rem 4rem;
+    box-shadow: 0 1rem 1.2rem rgba(0 , 0, 0, .2);
     z-index: 100;
 
     &--header{
