--- a/SCSS/components/header/_header.scss
+++ b/SCSS/components/header/_header.scss
@@ -10,6 +10,7 @@
     width: 100%;
     height: 8rem;
     background-color: var(--colorWhite);
+    margin-bottom: 4.8rem;
     padding: 0rem 2.4rem;
     border-bottom: .02rem solid rgba(0, 0, 0, .1);
     z-index: 200;
@@ -19,10 +20,12 @@
         top: 0;
         border-bottom: none;
         padding: 0 4.8rem;
+        margin-bottom: 8rem;
     }
 
     @include responsive(desktop){
         padding: 0 10rem;
+        margin-bottom: 12rem;
     }
 
     &__logo{
