--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -99,6 +99,7 @@ a {
   width: 100%;
   height: 8rem;
   background-color: var(--colorWhite);
+  margin-bottom: 4.8rem;
   padding: 0rem 2.4rem;
   border-bottom: 0.02rem solid rgba(0, 0, 0, 0.1);
   z-index: 200;
@@ -109,11 +110,13 @@ a {
     top: 0;
     border-bottom: none;
     padding: 0 4.8rem;
+    margin-bottom: 8rem;
   }
 }
 @media screen and (min-width: 1024px) {
   .main-header {
     padding: 0 10rem;
+    margin-bottom: 12rem;
   }
 }
 .main-header__logo {
@@ -291,6 +294,7 @@ a {
   border-radius: 1.6rem;
   color: var(--colorWhite);
   padding: 1.6rem 4rem;
+  box-shadow: 0 1rem 1.2rem rgba(0, 0, 0, 0.2);
   z-index: 100;
 }
 .main-button--header {
@@ -325,6 +329,27 @@ a {
 @media screen and (min-width: 1024px) {
   .main-button {
     padding: 1.6rem 4rem;
+  }
+}
+
+.main-hero {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  border: 0.1rem solid palegreen;
+  padding: 0 2.4rem;
+}
+@media screen and (min-width: 740px) {
+  .main-hero {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 4.8rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .main-hero {
+    grid-template-columns: 1fr minmax(53rem, 54rem);
+    grid-template-rows: repeat(1, minmax(49rem, 1fr));
+    column-gap: 3.6rem;
+    padding: 0 10rem;
   }
 }
 
