--- a/SCSS/components/hero/_title.scss
+++ b/SCSS/components/hero/_title.scss
@@ -1,2 +1,40 @@
 @use '../../abstracts/variables' as *;
 @use '../../abstracts/mixins' as *;
+
+// Estilos para el título de Hero
+
+.main-hero__title{
+	margin-bottom: 1.2rem;
+
+	@include responsive(desktop){
+		margin-bottom: 2rem;
+	}
+
+	@include responsive(1400px){
+		width: 90%;
+	}
+
+	@include responsive(1400px){
+		width: 85%;
+	}
+
+	@include responsive(1500px){
+		width: 80%;
+	}
+
+	@include responsive(1600px){
+		width: 85%;
+	}
+
+	@include responsive(1900px){
+		width: 90%;
+	}
+
+	@include responsive(2300px){
+		width: 100%;
+	}
+
+	@include responsive(3000px){
+		width: 90%;
+	}
+}
