--- a/SCSS/components/hero/_button-hero.scss
+++ b/SCSS/components/hero/_button-hero.scss
@@ -1,2 +1,8 @@
 @use '../../abstracts/variables' as *;
 @use '../../abstracts/mixins' as *;
+
+.main-button--hero{
+	@include responsive(desktop){
+		margin-bottom: 4rem;
+	}
+}
