--- a/SCSS/components/hero/_text.scss
+++ b/SCSS/components/hero/_text.scss
@@ -1,2 +1,42 @@
 @use '../../abstracts/variables' as *;
 @use '../../abstracts/mixins' as *;
+
+.main-hero__text{
+	opacity: .4;
+
+	@include responsive(desktop){
+		margin-bottom: 4rem;
+	}
+
+	@include responsive(1240px){
+		width: 75%;
+	}
+
+	@include responsive(1360px){
+		width: 70%;
+	}
+
+	@include responsive(1440px){
+		width: 55%;
+	}
+
+	@include responsive(1600px){
+		width: 80%;
+	}
+
+	@include responsive(1650px){
+		width: 65%;
+	}
+
+	@include responsive(1900px){
+		width: 90%;
+	}
+
+	@include responsive(2300px){
+		width: 100%;
+	}
+
+	@include responsive(2400px){
+		width: 72%;
+	}
+}
