--- a/SCSS/components/header/_header.scss
+++ b/SCSS/components/header/_header.scss
@@ -2,8 +2,8 @@
 @use '../../abstracts/mixins' as *;
 
 .main-header{
-    position: fixed;
-    top: 1.2rem;
+    position: sticky;
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
