--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,17 +17,17 @@
 /* Mixin para before */
 /* Mixin para after */
 @media screen and (min-width: 1600px) {
-  .main-header {
+  .main-header, .main-hero {
     max-width: 80%;
   }
 }
 @media screen and (min-width: 1900px) {
-  .main-header {
+  .main-header, .main-hero {
     max-width: 65%;
   }
 }
 @media screen and (min-width: 2300px) {
-  .main-header {
+  .main-header, .main-hero {
     max-width: 50%;
   }
 }
@@ -78,7 +78,7 @@ p, a {
 
 p {
   font-size: 1.4rem;
-  line-height: 1.56;
+  line-height: 1.7;
 }
 @media screen and (min-width: 740px) {
   p {
@@ -91,8 +91,8 @@ a {
 }
 
 .main-header {
-  position: fixed;
-  top: 1.2rem;
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -267,8 +267,8 @@ a {
 }
 @media screen and (min-width: 1024px) {
   .main-header__list-link:hover {
-    color: var(--firstColorPrimary);
     transition: all 0.4s;
+    color: #86969d;
   }
   .main-header__list-link:hover::before {
     width: 100%;
@@ -335,7 +335,6 @@ a {
 .main-hero {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  border: 0.1rem solid palegreen;
   padding: 0 2.4rem;
 }
 @media screen and (min-width: 740px) {
@@ -346,10 +345,125 @@ a {
 }
 @media screen and (min-width: 1024px) {
   .main-hero {
-    grid-template-columns: 1fr minmax(53rem, 54rem);
-    grid-template-rows: repeat(1, minmax(49rem, 1fr));
-    column-gap: 3.6rem;
+    grid-template-columns: 1fr minmax(46rem, 48rem);
+    grid-template-rows: repeat(1, minmax(54rem, 1fr));
+    column-gap: 2.4rem;
     padding: 0 10rem;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .main-hero {
+    grid-template-columns: 1fr minmax(52rem, 54rem);
+    column-gap: 3.6rem;
+  }
+}
+@media screen and (min-width: 2700px) {
+  .main-hero {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.main-hero__image img {
+  display: block;
+  width: 100%;
+}
+
+.main-hero__title {
+  margin-bottom: 1.2rem;
+}
+@media screen and (min-width: 1024px) {
+  .main-hero__title {
+    margin-bottom: 2rem;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .main-hero__title {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .main-hero__title {
+    width: 85%;
+  }
+}
+@media screen and (min-width: 1500px) {
+  .main-hero__title {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .main-hero__title {
+    width: 85%;
+  }
+}
+@media screen and (min-width: 1900px) {
+  .main-hero__title {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 2300px) {
+  .main-hero__title {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 3000px) {
+  .main-hero__title {
+    width: 90%;
+  }
+}
+
+.main-hero__text {
+  opacity: 0.4;
+}
+@media screen and (min-width: 1024px) {
+  .main-hero__text {
+    margin-bottom: 4rem;
+  }
+}
+@media screen and (min-width: 1240px) {
+  .main-hero__text {
+    width: 75%;
+  }
+}
+@media screen and (min-width: 1360px) {
+  .main-hero__text {
+    width: 70%;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .main-hero__text {
+    width: 55%;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .main-hero__text {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 1650px) {
+  .main-hero__text {
+    width: 65%;
+  }
+}
+@media screen and (min-width: 1900px) {
+  .main-hero__text {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 2300px) {
+  .main-hero__text {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 2400px) {
+  .main-hero__text {
+    width: 72%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .main-button--hero {
+    margin-bottom: 4rem;
   }
 }
 
