--- a/SCSS/components/header/_header.scss
+++ b/SCSS/components/header/_header.scss
@@ -2,7 +2,7 @@
 @use '../../abstracts/mixins' as *;
 
 .main-header{
-    position: sticky;
+    position: fixed;
     top: 0;
     display: flex;
     justify-content: space-between;
@@ -10,22 +10,19 @@
     width: 100%;
     height: 8rem;
     background-color: var(--colorWhite);
-    margin-bottom: 4.8rem;
+    margin-bottom: 2.4rem;
     padding: 0rem 2.4rem;
     border-bottom: .02rem solid rgba(0, 0, 0, .1);
     z-index: 200;
 
     @include responsive(tablet){
         position: relative;
-        top: 0;
         border-bottom: none;
         padding: 0 4.8rem;
-        margin-bottom: 8rem;
     }
 
     @include responsive(desktop){
         padding: 0 10rem;
-        margin-bottom: 12rem;
     }
 
     &__logo{
@@ -37,19 +34,18 @@
  
 .main-header__content{
     position: absolute;
-    top: 8rem;
-    right: -70vw;
+    top: 12rem;
+    right: -100vw;
+    width: calc(100vw - 2.4rem);
     display: flex;
-    width: 70vw;
-    height: calc(100vh - 8rem);
+    height: 32rem;
     z-index: 1000;
     transition: right .5s;
 
     &--new{
-        right: 0;
+        right: 1rem;
     }
     
-
     @include responsive(700px){
         position: static;
         top: 0;
