--- a/SCSS/components/header/_nav.scss
+++ b/SCSS/components/header/_nav.scss
@@ -3,9 +3,10 @@
 
 .main-header__nav{
     width: 100%;
-    padding: 4.8rem 0;
     background-color: var(--colorWhite);
-    height: calc(100vh - 8rem);
+    height: 32rem;
+    border: .1rem solid black;
+    background-color: aqua;
     
     @include responsive(700px){
         position: static;
@@ -17,7 +18,6 @@
         padding: 0;
     }
 }
-
 
 /* Lista del Header */
 
