--- a/SCSS/base/_base.scss
+++ b/SCSS/base/_base.scss
@@ -16,9 +16,9 @@ body{
 	flex-direction: column;
 	align-items: center;
 	min-height: 100vh;
-	padding-top: 1.2rem;
+	padding-top: 8rem;
 
-	@include responsive(desktop){
-		padding-top: 2.4rem;
+	@include responsive(tablet){
+		padding-top: 3.6rem;
 	}
 }
