--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -12,6 +12,7 @@
   --colorWhite: #FFFFFF;
   --colorSecondary: #FFF0EC;
   --colorOrange: #F3603C;
+  --colorText: rgb(134, 150,157);
 }
 
 /* Mixin para before */
@@ -47,11 +48,11 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  padding-top: 1.2rem;
+  padding-top: 8rem;
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 740px) {
   body {
-    padding-top: 2.4rem;
+    padding-top: 3.6rem;
   }
 }
 
@@ -79,6 +80,8 @@ p, a {
 p {
   font-size: 1.4rem;
   line-height: 1.7;
+  font-weight: 200;
+  color: var(--colorText);
 }
 @media screen and (min-width: 740px) {
   p {
@@ -91,7 +94,7 @@ a {
 }
 
 .main-header {
-  position: sticky;
+  position: fixed;
   top: 0;
   display: flex;
   justify-content: space-between;
@@ -99,7 +102,7 @@ a {
   width: 100%;
   height: 8rem;
   background-color: var(--colorWhite);
-  margin-bottom: 4.8rem;
+  margin-bottom: 2.4rem;
   padding: 0rem 2.4rem;
   border-bottom: 0.02rem solid rgba(0, 0, 0, 0.1);
   z-index: 200;
@@ -107,16 +110,13 @@ a {
 @media screen and (min-width: 740px) {
   .main-header {
     position: relative;
-    top: 0;
     border-bottom: none;
     padding: 0 4.8rem;
-    margin-bottom: 8rem;
   }
 }
 @media screen and (min-width: 1024px) {
   .main-header {
     padding: 0 10rem;
-    margin-bottom: 12rem;
   }
 }
 .main-header__logo {
@@ -127,16 +127,16 @@ a {
 
 .main-header__content {
   position: absolute;
-  top: 8rem;
-  right: -70vw;
+  top: 12rem;
+  right: -100vw;
+  width: calc(100vw - 2.4rem);
   display: flex;
-  width: 70vw;
-  height: calc(100vh - 8rem);
+  height: 32rem;
   z-index: 1000;
   transition: right 0.5s;
 }
 .main-header__content--new {
-  right: 0;
+  right: 1rem;
 }
 @media screen and (min-width: 700px) {
   .main-header__content {
@@ -176,6 +176,11 @@ a {
 .container-main-hamburguer:hover {
   cursor: pointer;
 }
+.container-main-hamburguer--new {
+  transform: scale(1.8);
+  background-image: url("../images/icon-close.svg");
+  background-size: cover;
+}
 @media screen and (min-width: 700px) {
   .container-main-hamburguer {
     display: none;
@@ -184,9 +189,10 @@ a {
 
 .main-header__nav {
   width: 100%;
-  padding: 4.8rem 0;
   background-color: var(--colorWhite);
-  height: calc(100vh - 8rem);
+  height: 32rem;
+  border: 0.1rem solid black;
+  background-color: aqua;
 }
 @media screen and (min-width: 700px) {
   .main-header__nav {
@@ -229,8 +235,8 @@ a {
 
 .main-list__link {
   height: 100%;
-  margin: 1.6rem;
-  padding: 1.2rem 2.4rem;
+  margin: 1.2rem;
+  padding: 0.4rem 2.4rem;
 }
 @media screen and (min-width: 700px) {
   .main-list__link {
@@ -262,8 +268,15 @@ a {
 /* Estilos para los enlaces */
 .main-header__list-link {
   position: relative;
-  font-size: 1.3rem;
+  font-size: 1.6rem;
   color: var(--firstColorPrimary);
+  font-weight: 700;
+}
+@media screen and (min-width: 700px) {
+  .main-header__list-link {
+    font-size: 1.3rem;
+    font-weight: 400;
+  }
 }
 @media screen and (min-width: 1024px) {
   .main-header__list-link:hover {
@@ -335,12 +348,13 @@ a {
 .main-hero {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  padding: 0 2.4rem;
+  padding: 3.6rem 2.4rem 2.4rem 2.4rem;
+  row-gap: 3.6rem;
 }
 @media screen and (min-width: 740px) {
   .main-hero {
     grid-template-columns: repeat(2, 1fr);
-    padding: 0 4.8rem;
+    padding: 4.8rem 4.8rem 3.2rem 4.8rem;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -348,7 +362,7 @@ a {
     grid-template-columns: 1fr minmax(46rem, 48rem);
     grid-template-rows: repeat(1, minmax(54rem, 1fr));
     column-gap: 2.4rem;
-    padding: 0 10rem;
+    padding: 10rem 10rem 3.2rem 10rem;
   }
 }
 @media screen and (min-width: 1100px) {
@@ -360,6 +374,21 @@ a {
 @media screen and (min-width: 2700px) {
   .main-hero {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.main-hero__info {
+  order: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+@media screen and (min-width: 1024px) {
+  .main-hero__info {
+    order: -2;
+    text-align: start;
+    align-items: flex-start;
   }
 }
 
@@ -413,7 +442,7 @@ a {
 }
 
 .main-hero__text {
-  opacity: 0.4;
+  margin-bottom: 3.2rem;
 }
 @media screen and (min-width: 1024px) {
   .main-hero__text {
@@ -459,6 +488,9 @@ a {
   .main-hero__text {
     width: 72%;
   }
+}
+.main-hero__text--mobile {
+  font-size: 1.6rem;
 }
 
 @media screen and (min-width: 1024px) {
