--- a/SCSS/components/header/_button.scss
+++ b/SCSS/components/header/_button.scss
@@ -22,7 +22,11 @@
 
     @include responsive(700px){
         color: var(--colorWhite);
-        padding: 1.2rem 1.6rem;
+        padding: 1.6rem 2.4rem;
+    }
+
+    @include responsive(820px){
+        padding: 1.6rem 3.2rem;
     }
 
     &:hover::before{
