--- a/SCSS/components/hero/_hero.scss
+++ b/SCSS/components/hero/_hero.scss
@@ -4,20 +4,39 @@
 // Contenedor Principal
 
 .main-hero{
+	position: relative;
 	display: grid;
 	grid-template-columns: repeat(1,1fr);
-	padding: 0 2.4rem;
+	padding: 3.6rem 2.4rem 2.4rem 2.4rem;
+	row-gap: 3.6rem;
+	overflow: hidden;
+
+	&::before{
+		@include before(0, 0, 100%, 100%){
+			background-image: linear-gradient(to right bottom, rgba(0, 0, 0, 0.0001),rgba(0, 0, 0, 0.599));
+			opacity: 0;
+			transition: all .7s;
+		}
+
+		@include responsive(tablet){
+			display: none;
+		}
+	}
 	
+	@include responsive(700px){
+		padding: 3.6rem 3.6rem 3.2rem 3.6rem;
+	}
+
 	@include responsive(tablet){
-		grid-template-columns: repeat(2,1fr);
-		padding: 0 4.8rem;
+		grid-template-columns:minmax(56rem, 60rem);
+		grid-template-rows: minmax(50rem, 52rem) minmax(38rem, 40rem);
 	}
 
 	@include responsive(desktop){
 		grid-template-columns: 1fr minmax(46rem, 48rem);
 		grid-template-rows: repeat(1, minmax(54rem, 1fr));
 		column-gap: 2.4rem;
-		padding: 0 10rem;	
+		padding: 10rem 10rem 3.2rem 10rem;	
 	}
 
 	@include responsive(1100px){
@@ -28,14 +47,33 @@
 	@include responsive(2700px){
 		grid-template-columns: repeat(2,1fr);
 	}
+
+	&--new{
+		&::before{
+			opacity: 1;
+		}
+	}
+}
+
+// Contenedor de la info
+
+.main-hero__info{
+	order: 2;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+
+	@include responsive(desktop){
+		order: -2;
+		text-align: start;
+		align-items: flex-start;
+	}
 }
 
 // Contenedor de la imagen
 
 .main-hero__image{
-	// display: flex;
-	// justify-content: center;
-	// align-items: center;
 
 	& img{
 		display: block;
