--- a/SCSS/components/hero/_text.scss
+++ b/SCSS/components/hero/_text.scss
@@ -2,7 +2,7 @@
 @use '../../abstracts/mixins' as *;
 
 .main-hero__text{
-	opacity: .4;
+	margin-bottom: 3.2rem;
 
 	@include responsive(desktop){
 		margin-bottom: 4rem;
@@ -38,5 +38,9 @@
 
 	@include responsive(2400px){
 		width: 72%;
+	}
+
+	&--mobile{
+		font-size: 1.6rem;
 	}
 }
