--- a/SCSS/components/main/_main-subtitle.scss
+++ b/SCSS/components/main/_main-subtitle.scss
@@ -1,2 +1,13 @@
 @use '../../abstracts/variables' as *;
 @use '../../abstracts/mixins' as *;
+
+.main-subtitle{
+	font-size: 3rem;
+	font-weight: 600;
+	margin-bottom: 1.6rem;
+
+	@include responsive(tablet){
+		font-size: 4rem;
+		margin-bottom: 2.4rem;
+	}
+}
