--- a/SCSS/components/main/_text.scss
+++ b/SCSS/components/main/_text.scss
@@ -1,2 +1,26 @@
 @use '../../abstracts/variables' as *;
 @use '../../abstracts/mixins' as *;
+
+.main-paragraph{
+	font-size: 1.4rem;
+	margin-bottom: 4.8rem;
+
+	@include responsive(tablet){
+		font-size: 1.6rem;
+		margin-bottom: 4rem;
+	}
+}
+
+// Estilos para text-bold
+
+.text-bold{
+	display: inline-block;
+	font-size: 1.6rem;
+	font-weight: 700;
+	color: var(--firstColorPrimary);
+	margin-bottom: 2.4rem;
+
+	@include responsive(desktop){
+		margin-bottom: 2.4rem;
+	}
+}
