Se agregó un comentario

--- a/SCSS/abstracts/_variables.scss
+++ b/SCSS/abstracts/_variables.scss
@@ -5,7 +5,7 @@
 	--fontText: 'Be Vietnam Pro', sans-serif;
 }
 
-// font-weight: 200 (para textos) 
+// font-weight: 200, 300 (para textos) 
 // font-weight: 400,500 (para títulos) 
 // font-weight: 700 (para botones)
 
