--- a/SCSS/components/slider/_slider.scss
+++ b/SCSS/components/slider/_slider.scss
@@ -1,2 +1,15 @@
 @use '../../abstracts/variables' as *;
 @use '../../abstracts/mixins' as *;
+
+.main-slider{
+	width: 100%;
+	padding: 0 2.4rem;
+
+	@include responsive(tablet){
+		padding: 0 3.6rem;
+	}
+
+	@include responsive(desktop){
+		padding: 0 10rem;
+	}
+}
