--- a/SCSS/components/slider/_cards.scss
+++ b/SCSS/components/slider/_cards.scss
@@ -1,2 +1,17 @@
 @use '../../abstracts/variables' as *;
 @use '../../abstracts/mixins' as *;
+
+.main-slider__card{
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	background-color: rgb(249, 249, 249);
+	padding: 0 1.6rem;
+	border-radius: 1.6rem;
+
+	@include responsive(700px){
+		max-width: 54rem;
+	}
+}
