--- a/SCSS/components/slider/_slider.scss
+++ b/SCSS/components/slider/_slider.scss
@@ -4,6 +4,7 @@
 .main-slider{
 	width: 100%;
 	padding: 0 2.4rem;
+	border: .1rem solid green;
 
 	@include responsive(tablet){
 		padding: 0 3.6rem;
@@ -11,5 +12,16 @@
 
 	@include responsive(desktop){
 		padding: 0 10rem;
+	}
+}
+
+
+// Contenedor de los cards
+
+.main-slider__box{
+	margin-bottom: 6.4rem;
+
+	@include responsive(desktop){
+		margin-bottom: 4.8rem;
 	}
 }
