Cambios transpilados a la carpeta de estilos CSS

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -706,22 +706,32 @@ a {
 }
 
 .main-slider {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
+  height: auto;
   padding: 0 2.4rem;
   border: 0.1rem solid green;
+  margin-bottom: 4.8rem;
 }
 @media screen and (min-width: 740px) {
   .main-slider {
     padding: 0 3.6rem;
+    margin-bottom: 9.6rem;
   }
 }
 @media screen and (min-width: 1024px) {
   .main-slider {
     padding: 0 10rem;
+    margin-bottom: 12rem;
   }
 }
 
 .main-slider__box {
+  width: 100%;
+  list-style: none;
+  display: flex;
   margin-bottom: 6.4rem;
 }
 @media screen and (min-width: 1024px) {
@@ -753,7 +763,8 @@ a {
 }
 @media screen and (min-width: 700px) {
   .main-slider__card {
-    max-width: 54rem;
+    min-width: 56rem;
+    margin-right: 3.2rem;
   }
 }
 
