--- a/SCSS/components/slider/_slider.scss
+++ b/SCSS/components/slider/_slider.scss
@@ -2,16 +2,23 @@
 @use '../../abstracts/mixins' as *;
 
 .main-slider{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	width: 100%;
+	height: auto;
 	padding: 0 2.4rem;
 	border: .1rem solid green;
+	margin-bottom: 4.8rem;
 
 	@include responsive(tablet){
 		padding: 0 3.6rem;
+		margin-bottom: 9.6rem;
 	}
 
 	@include responsive(desktop){
 		padding: 0 10rem;
+		margin-bottom: 12rem;
 	}
 }
 
@@ -19,6 +26,9 @@
 // Contenedor de los cards
 
 .main-slider__box{
+	width: 100%;
+	list-style: none;
+	display: flex;
 	margin-bottom: 6.4rem;
 
 	@include responsive(desktop){
