--- a/SCSS/components/slider/_slider.scss
+++ b/SCSS/components/slider/_slider.scss
@@ -10,6 +10,7 @@
 	padding: 0 2.4rem;
 	border: .1rem solid green;
 	margin-bottom: 4.8rem;
+	overflow: hidden;
 
 	@include responsive(tablet){
 		padding: 0 3.6rem;
@@ -19,6 +20,7 @@
 	@include responsive(desktop){
 		padding: 0 10rem;
 		margin-bottom: 12rem;
+
 	}
 }
 
