Añadimos un efecto hover

--- a/SCSS/components/footer/_footer-list.scss
+++ b/SCSS/components/footer/_footer-list.scss
@@ -28,6 +28,11 @@
 
 .main-footer__items{
 	margin-bottom: 1.4rem;
+
+	&:hover .main-footer__enlace{
+		color: var(--colorOrange);
+		transition: all .4s;
+	}
 }
 
 // Enlaces
@@ -37,4 +42,5 @@
 	color: white;
 	font-weight: 300;
 	padding: .4rem;
+	transition: all .4s;
 }
