--- a/SCSS/components/slider/_text.scss
+++ b/SCSS/components/slider/_text.scss
@@ -12,5 +12,17 @@
 // Texto del card
 .main-paragraph--slider{
 	margin-bottom: 4.8rem;
+
+	@include responsive(tablet){
+		width: 80%;
+	}
+
+	@include responsive(desktop){
+		width: 100%;
+	}
+
+	@include responsive(2800px){
+		width: 80%;
+	}
 }
 
