--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -706,15 +706,12 @@ a {
 }
 
 .main-slider {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   width: 100%;
   height: auto;
+  display: flex;
+  flex-direction: column;
   padding: 0 2.4rem;
-  border: 0.1rem solid green;
   margin-bottom: 4.8rem;
-  overflow: hidden;
 }
 @media screen and (min-width: 740px) {
   .main-slider {
@@ -728,23 +725,22 @@ a {
     margin-bottom: 12rem;
   }
 }
-
-.main-slider__box {
-  width: 100%;
-  list-style: none;
-  display: flex;
-  margin-bottom: 6.4rem;
+.main-slider__button-container {
+  align-self: center;
 }
-@media screen and (min-width: 1024px) {
-  .main-slider__box {
-    margin-bottom: 4.8rem;
-  }
+
+.carousel {
+  margin-bottom: 4.8rem;
+}
+
+.carousel__container {
+  position: relative;
 }
 
 .main-subtitle--slider {
   text-align: center;
   font-size: 3.2rem;
-  margin-bottom: 7.2rem;
+  margin-bottom: 5rem;
 }
 @media screen and (min-width: 740px) {
   .main-subtitle--slider {
@@ -752,29 +748,106 @@ a {
   }
 }
 
-.main-slider__card {
+.carousel__anterior, .carousel__siguiente {
+  position: absolute;
+  display: none;
+  width: 3.6rem;
+  height: 3.6rem;
+  border: none;
+  top: calc(50% - 3.5rem);
+  cursor: pointer;
+  line-height: 3rem;
+  text-align: center;
+  color: var(--colorWhite);
+  border-radius: 3.2rem;
+  opacity: 0.4;
+  transition: all 0.5s;
+  z-index: 100;
+}
+.carousel__anterior::before, .carousel__siguiente::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
+  color: var(--colorWhite);
+  background-color: var(--colorOrange);
+  border-radius: 3.2rem;
+  z-index: -100;
+}
+@media screen and (min-width: 1024px) {
+  .carousel__anterior, .carousel__siguiente {
+    display: block;
+  }
+}
+
+.carousel__anterior:hover,
+.carousel__siguiente:hover {
+  opacity: 100%;
+  transition: all 0.7s;
+}
+
+.carousel__anterior {
+  left: -4.8rem;
+}
+
+.carousel__siguiente {
+  right: -3.6rem;
+}
+
+.carousel__indicadores .glider-dot {
+  display: block;
+  background: var(--colorOrange);
+  opacity: 0.2;
+}
+
+.carousel__indicadores .glider-dot:hover {
+  opacity: 0.5;
+}
+
+.carousel__indicadores .glider-dot.active {
+  opacity: 1;
+}
+
+.carousel__element {
+  width: 90%;
+  height: 25rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  background-color: #f9f9f9;
-  padding: 0 1.6rem;
+  background-color: #FAFAFA;
+  padding: 0 1.2rem;
+  margin-bottom: 1.2rem;
+  margin-right: 1.6rem;
   border-radius: 1.6rem;
 }
-@media screen and (min-width: 700px) {
-  .main-slider__card {
-    min-width: 56rem;
-    margin-right: 3.2rem;
-  }
-}
-
-.main-slider__img {
+.carousel__element img {
   display: block;
   width: 7.2rem;
   height: 7.2rem;
-  margin-bottom: 1.2rem;
-  transform: translateY(-2.4rem);
+  margin: 1.6rem 0;
+}
+@media screen and (min-width: 700px) {
+  .carousel__element {
+    width: 80%;
+    padding: 0 2.4rem;
+    margin-right: 3.2rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .carousel__element {
+    width: 60rem !important;
+  }
+}
+@media screen and (min-width: 2800px) {
+  .carousel__element {
+    width: 90rem !important;
+  }
+}
+.carousel__element--no-margin-rigth {
+  margin-right: 0;
 }
 
 .card-title {
@@ -785,6 +858,21 @@ a {
 
 .main-paragraph--slider {
   margin-bottom: 4.8rem;
+}
+@media screen and (min-width: 740px) {
+  .main-paragraph--slider {
+    width: 80%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .main-paragraph--slider {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 2800px) {
+  .main-paragraph--slider {
+    width: 80%;
+  }
 }
 
 .main-article {
