--- a/SCSS/components/header/_header.scss
+++ b/SCSS/components/header/_header.scss
@@ -12,13 +12,14 @@
     background-color: var(--colorWhite);
     margin-bottom: 2.4rem;
     padding: 0rem 2.4rem;
-    border-bottom: .02rem solid rgba(0, 0, 0, .1);
+    box-shadow: .1rem .4rem .4rem rgba(0,0,0,.1);
     z-index: 200;
 
     @include responsive(tablet){
         position: relative;
         border-bottom: none;
         padding: 0 3.6rem;
+        box-shadow: none;
     }
 
     @include responsive(desktop){
