--- a/SCSS/base/_breakpoints.scss
+++ b/SCSS/base/_breakpoints.scss
@@ -14,3 +14,7 @@
         max-width: 50%;
     }
 }
+
+.main-hero, .main, .main-slider, .main-article, .main-footer, .footer-last-part{
+    overflow: hidden;
+}
